--- a/modules/Models training/image-based/Vgg16.ipynb
+++ b/modules/Models training/image-based/Vgg16.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "EClm9cse0War"
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "CSd037WUfFY5"
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "eNoRR8WIfNQH"
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "D0DCDOojEQ8Q"
    },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "KQ_yvdcOUYrM"
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "jUwe7esm9a2k"
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "background_save": true,
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -497,19 +497,18 @@
     "collapsed": false
    },
    "source": [
-    "Classification Report\n",
-    "              precision    recall  f1-score   support\n",
+    "| Label    | Precision | Recall | F1-Score | Support |\n",
+    "|----------|-----------|--------|----------|---------|\n",
+    "| O        | 0.68      | 1.00   | 0.81     | 3470    |\n",
+    "| C        | 0.56      | 1.00   | 0.72     | 2867    |\n",
+    "| E        | 0.00      | 0.00   | 0.00     | 2028    |\n",
+    "| A        | 0.64      | 1.00   | 0.78     | 3272    |\n",
+    "| N        | 0.00      | 0.00   | 0.00     | 721     |\n",
+    "| **Micro Avg** | **0.63**  | **0.78**  | **0.70**  | **12358** |\n",
+    "| **Macro Avg** | **0.38**  | **0.60**  | **0.46**  | **12358** |\n",
+    "| **Weighted Avg** | **0.49**  | **0.78**  | **0.60**  | **12358** |\n",
+    "| **Samples Avg** | **0.63**  | **0.78**  | **0.67**  | **12358** |\n",
     "\n",
-    "           O       0.68      1.00      0.81      3470\n",
-    "           C       0.56      1.00      0.72      2867\n",
-    "           E       0.00      0.00      0.00      2028\n",
-    "           A       0.64      1.00      0.78      3272\n",
-    "           N       0.00      0.00      0.00       721\n",
-    "\n",
-    "   micro avg       0.63      0.78      0.70     12358\n",
-    "   macro avg       0.38      0.60      0.46     12358\n",
-    "weighted avg       0.49      0.78      0.60     12358\n",
-    " samples avg       0.63      0.78      0.67     12358\n",
     "\n"
    ]
   },
@@ -519,22 +518,37 @@
     "collapsed": false
    },
    "source": [
-    "Confusion Matrices\n",
-    "Class O:\n",
-    "[[   0 1618]\n",
-    " [   0 3470]]\n",
-    "Class C:\n",
-    "[[   0 2221]\n",
-    " [   0 2867]]\n",
-    "Class E:\n",
-    "[[3059    1]\n",
-    " [2028    0]]\n",
-    "Class A:\n",
-    "[[   0 1816]\n",
-    " [   0 3272]]\n",
-    "Class N:\n",
-    "[[4367    0]\n",
-    " [ 721    0]]"
+    " Confusion Matrices\n",
+    "\n",
+    "  Class O:\n",
+    "| Predicted | O  | C |\n",
+    "|-----------|----|---|\n",
+    "| **Actual O** | 0  | 1618 |\n",
+    "| **Actual C** | 0  | 3470 |\n",
+    "\n",
+    "  Class C:\n",
+    "| Predicted | C  | E |\n",
+    "|-----------|----|---|\n",
+    "| **Actual C** | 0  | 2221 |\n",
+    "| **Actual E** | 0  | 2867 |\n",
+    "\n",
+    "  Class E:\n",
+    "| Predicted | E  | A |\n",
+    "|-----------|----|---|\n",
+    "| **Actual E** | 3059  | 1 |\n",
+    "| **Actual A** | 2028  | 0 |\n",
+    "\n",
+    "  Class A:\n",
+    "| Predicted | A  | N |\n",
+    "|-----------|----|---|\n",
+    "| **Actual A** | 0  | 1816 |\n",
+    "| **Actual N** | 0  | 3272 |\n",
+    "\n",
+    "  Class N:\n",
+    "| Predicted | N  | O |\n",
+    "|-----------|----|---|\n",
+    "| **Actual N** | 4367  | 0 |\n",
+    "| **Actual O** | 721  | 0 |\n"
    ]
   }
  ],
